--- a/Rental/Rental.WEB/Views/Admin/GetUsers.cshtml
+++ b/Rental/Rental.WEB/Views/Admin/GetUsers.cshtml
@@ -1,16 +1,69 @@
-﻿@model Rental.WEB.Models.View_Models.Admin.GetUsersVM
+﻿@using Rental.WEB.Helpers
+@model Rental.WEB.Models.View_Models.Admin.GetUsersVM
 
 @{
     ViewBag.Title = "Пользователи";
+    int f = 0;
+    int n = 0;
 }
 
 @Styles.Render("~/Content/styles/admin/get-users")
+@Styles.Render("~/Content/styles/shared/filter")
 
 <div class="row">
-    <div class="col-md-4" style="background-color:black; height:1000px;">
-        sd
+    <div id="filter" class="col-md-4">
+        @using (Html.BeginForm("GetUsers", "Admin", FormMethod.Post, new { id = "filters" }))
+        {
+            <input type="hidden" value="@Model.SelectedMode" name="selectedMode" />
+            <div id="button-container" class="container-fluid text-center">
+                <button id="start-filters" type="submit" value="1" name="sortMode" class="btn btn-warning">Отфильтровать</button>
+                <input type="reset" value="Сбросить" class="btn btn-default" onclick="document.location='@Url.Action("GetUsers", "Admin")'" />
+            </div>
+            <br />
+            foreach (var i in Model.Filters.GroupBy(x => x.Name))
+            {
+                <div class="">
+                    <div class="btn btn-default dropdown-toggle" data-toggle="collapse" data-target="#filter-collapse-@f">
+                        @( i.Key) <span class="glyphicon glyphicon-menu-down"></span>
+                    </div>
+                    <div class="collapse" id="filter-collapse-@(f++)">
+                        <ul class="filter-items">
+                            @foreach (var j in i)
+                            {
+                                <li>
+                                    <input type="hidden" name="Filters[@n].Name" value="@j.Name" />
+                                    <input type="hidden" name="Filters[@n].Text" value="@j.Text" />
+                                    <input id="it@(n)" type="checkbox" name='Filters[@(n)].Checked' value="true"
+                                           @(j.Checked ? "checked=\"checked\"" : "") />
+                                    <label for="it@(n++)" class="text-warning">@j.Text</label>
+                                </li>
+                            }
+                        </ul>
+                    </div>
+                </div>
+                <br />
+            }
+        }
     </div>
     <div class=" col-md-8">
+        <div>
+            <div class="dropdown">
+                <button class="btn btn-secondary btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    @Model.SortModes[Model.SelectedMode - 1]
+                    <span class="glyphicon  @((Model.SelectedMode - 1)%2==0?"glyphicon-arrow-up":"glyphicon-arrow-down")"></span>
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    @for (int i = 0; i < Model.SortModes.Count; i++)
+                    {<div class="dropdown-item">
+                            <button class="btn " type="submit" name="sortMode" form="filters" value="@(i+1)">
+                                @Model.SortModes[i]
+                                <span class="glyphicon  @(i%2==0?"glyphicon-arrow-up":"glyphicon-arrow-down")"></span>
+                            </button>
+                        </div>
+                    }
+                </div>
+            </div>
+        </div>
         @foreach (var i in Model.UsersDM)
         {
             <div class="col-md-12">
@@ -39,6 +92,14 @@
 
             </div>
             <hr />
+        }
+        @if (Model.PageInfo.TotalPages > 1)
+        {
+            <div class="text-right">
+                <div class="btn-group">
+                    @Html.PageLinks(Model.PageInfo, "filters")
+                </div>
+            </div>
         }
     </div>
 </div>
