--- a/Rental/Rental.WEB/Views/Client/CreateProfile.cshtml
+++ b/Rental/Rental.WEB/Views/Client/CreateProfile.cshtml
@@ -2,6 +2,11 @@
 
 @{
     ViewBag.Title = "CreateProfile";
+    List<object> s = new List<object>()
+    {
+        new {Text="Мужской" },
+        new {Text="Женский" }
+    };
 }
 
 @using (Html.BeginForm()) 
@@ -38,7 +43,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Sex, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Sex, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.Sex, new SelectList(s, "Text", "Text"), new { htmlAttributes = new { @class = "form-control" } })
+                @*@Html.EditorFor(model => model.Sex, new { htmlAttributes = new { @class = "form-control" } })*@
                 @Html.ValidationMessageFor(model => model.Sex, "", new { @class = "text-danger" })
             </div>
         </div>
