--- a/Rental/Rental.WEB/Views/Manager/Return.cshtml
+++ b/Rental/Rental.WEB/Views/Manager/Return.cshtml
@@ -46,7 +46,7 @@
     </div>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
+    @*<div class="form-group">
         @Html.LabelFor(model => model.IsReturned, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             <div class="checkbox">
@@ -54,7 +54,7 @@
                 @Html.ValidationMessageFor(model => model.IsReturned, "", new { @class = "text-danger" })
             </div>
         </div>
-    </div>
+    </div>*@
     <div class="form-group">
         @Html.Label("С повреждениями", new { @for = "withCrash", @class = "control-label col-md-2" })
         <div class="col-md-10">
