--- a/Rental/Rental.WEB/Views/Shared/Register.cshtml
+++ b/Rental/Rental.WEB/Views/Shared/Register.cshtml
@@ -49,7 +49,7 @@
 
     <div class="form-group">
         <div class="col-md-offset-3 col-md-10">
-            <input type="submit" value="Зарегистрироваться" class="btn btn-default btn-dark" />
+            <input type="submit" value="@(isManager?"Добавить":"Зарегистрироваться")" class="btn btn-default btn-dark" />
         </div>
     </div>
 </div>
